@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-15T08:14:34Z",
+  "timestamp" : "2022-05-16T01:01:19Z",
   "count_outdated" : 266,
   "uniques_outdated" : 132,
-  "count" : 303,
+  "count" : 304,
   "uniques" : 157,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
